stylesheets/_site-branding.scss
/** === Site Branding === */

.site-header {

	position: absolute;
	width: 100%;
	.site-header-wrapper {

		@include media( tablet ) {
			max-width: $x-grid-column-12;
			display: flex;
			align-items: center;
			margin-left: auto;
			margin-right: auto;
		}		
	}

	.blog & {
		background-color: $x-color-secondary-base;
		position: static;
		padding-bottom: $x-space-lg;
	}
}

.site-identity {

	color: $x-color-words-subtle;
	margin: $x-space-sm;

	@include media( tablet ) {
		margin: $x-space-md $x-space-md 0 0;
	}

	& > * {
		margin-bottom: $x-space-xs;

		&:first-child {
			margin-top: 0;
		}

		&:last-child {
			margin-bottom: 0;
		}
	}

	@include media( tablet ) {

		max-width: $x-grid-column-5;
		display: flex;
		align-content: stretch;
		align-items: center;
		width: 100%;

		& > * {
			margin-bottom: 0;
			margin-right: $x-space-sm;

			&:last-child {
				margin-right: 0;
			}
		}
	}

	.site-title {

		font-family: $x-font-family-heading;
		font-size: $x-font-size-lg;
		font-weight: 400;
		color: $x-color-shade-white;
		margin: 0;

		a {
			@include link-transition;
			display: block;
			text-decoration: none;
			color: $x-color-shade-white;

		}
	}

	.site-description {
		font-family: $x-font-family-heading;
		font-size: $x-font-size-sm;
		color: $x-color-shade-white;
		margin: 0.5em 0 0;
		font-weight: normal;
		opacity: .75;
	}

	.custom-logo-link {
		display: block;
		line-height: 0;
	}
}

.site-footer {
	background: $x-color-secondary-base;

	.jetpack-social-navigation {
		padding-top: $x-space-sm;
	}

	@include media( tablet ) {
		
		$credits_width: 60%;
		
		.site-credits {
			box-sizing: border-box;
			max-width: $credits_width;
			padding: $x-space-sm 0;
		}
	
		.jetpack-social-navigation {
			max-width: 100% - $credits_width;
			order: 2;
			padding: 0;
		}
	}
	
}

.site-info {

	color: $x-color-words-subtle;
	font-size: $x-font-size-sm;
	font-family: $x-font-family-body;
	padding: $x-space-sm;
	
	@include media( mobile ) {
		display: flex;
		flex-direction: column;
		padding-top: 0;
		padding-bottom: 0;
	}
	
	a {
		color: $x-color-words-subtle;

		&:hover {
			text-decoration: none;
			color: $x-color-shade-white;
		}
	}

	@include media( tablet ) {
		max-width: $x-grid-column-10;
		border-bottom: none;
		display: flex;
		align-items: center;
		justify-content: space-between;
		margin-left: auto;
		margin-right: auto;
		padding: $x-space-lg $x-space-sm;
	}
}

.site-credits {
	
	@include media( mobile ) {
		margin: 0;
		padding: $x-space-sm 0;
		width: 100%;
		order: 2;
	}
	
}

#primary-menu {
//	display: none;
}

